fix: Add copyright and fix gap in upper section

--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ body {
     display: flex;
     height: 240px;
     margin-top: 3rem;
-    gap: 20px;
+    gap: 30px;
     color: white;
 }
 
